// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> it render Accordion with controlled state 1`] = `
<Accordion
  dataAttrs={
    Object {
      "arrowDown": Object {
        "data-arrow-down": "data-test-value",
      },
      "arrowUp": Object {
        "data-arrow-up": "data-test-value",
      },
      "collapse": Object {
        "data-collapse": "data-test-value",
      },
      "header": Object {
        "data-header": "data-test-value",
      },
      "root": Object {
        "data-root": "data-test-value",
      },
      "titleWrap": Object {
        "data-title-wrap": "data-test-value",
      },
    }
  }
  isOpened={true}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-accordion mfui-accordion_opened"
    data-root="data-test-value"
  >
    <div
      className="mfui-accordion__title-wrap"
      data-title-wrap="data-test-value"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <Header
        as="h5"
        data-header="data-test-value"
      >
        <h5
          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-header_space_wide"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-accordion__icon-box"
      >
        <test-file-stub
          className="mfui-accordion__icon"
          data-arrow-up="data-test-value"
        />
      </div>
    </div>
    <Collapse
      className="mfui-accordion__content"
      classNameContainer="mfui-accordion__content-inner"
      data-collapse="data-test-value"
      isOpened={true}
    >
      <div
        className="mfui-accordion__content"
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="mfui-accordion__content-inner"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;

exports[`<Accordion /> it renders Accordion 1`] = `
<Accordion
  dataAttrs={
    Object {
      "arrowDown": Object {
        "data-arrow-down": "data-test-value",
      },
      "arrowUp": Object {
        "data-arrow-up": "data-test-value",
      },
      "collapse": Object {
        "data-collapse": "data-test-value",
      },
      "header": Object {
        "data-header": "data-test-value",
      },
      "root": Object {
        "data-root": "data-test-value",
      },
      "titleWrap": Object {
        "data-title-wrap": "data-test-value",
      },
    }
  }
  isOpened={false}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-accordion"
    data-root="data-test-value"
  >
    <div
      className="mfui-accordion__title-wrap"
      data-title-wrap="data-test-value"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <Header
        as="h5"
        data-header="data-test-value"
      >
        <h5
          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-header_space_wide"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-accordion__icon-box"
      >
        <test-file-stub
          className="mfui-accordion__icon"
          data-arrow-down="data-test-value"
        />
      </div>
    </div>
    <Collapse
      className="mfui-accordion__content"
      classNameContainer="mfui-accordion__content-inner"
      data-collapse="data-test-value"
      isOpened={false}
    >
      <div
        className="mfui-accordion__content"
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="mfui-accordion__content-inner"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;
